# Advanced_RAT2

./: CMakeLists.txt  Client Run.js  Connection.cpp  Connection.h  Functions.cpp  Functions.h  Keylogger.cpp  Keylogger.h  Proxy Server.js  RAT Client.html  README.md  Reciving Image  Server.py  ShareCamera Receiver  ShareCamera.cpp  ShareCamera.h  ShareCameraCode  ShareMicOutput.cpp  ShareMicOutput.h  ShareScreen.cpp  ShareScreen.h  Test.py  main.cpp
